<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    app:cardBackgroundColor="@color/colorWhite"
    app:cardCornerRadius="20dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true"
    tools:context=".ui.CoronaActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/question_1"
                style="@style/TitleTextQStyle"
                android:text="@string/question_1" />

            <TextView
                android:id="@+id/answer_1"
                style="@style/TextCovidDefinitionStyle"
                android:text="@string/answer_1" />

            <TextView
                android:id="@+id/question_2"
                style="@style/TitleTextQStyle"
                android:layout_marginTop="15dp"
                android:text="@string/question_2" />

            <TextView
                android:id="@+id/answer_2"
                style="@style/TextCovidDefinitionStyle"
                android:text="@string/answer_2" />

            <TextView
                android:id="@+id/question_3"
                style="@style/TitleTextQStyle"
                android:layout_marginTop="15dp"
                android:text="@string/question_3" />

            <TextView
                android:id="@+id/answer_3"
                style="@style/TextCovidDefinitionStyle"
                android:text="@string/answer_3" />

            <TextView
                android:id="@+id/question_4"
                style="@style/TitleTextQStyle"
                android:layout_marginTop="15dp"
                android:text="@string/question_4" />

            <TextView
                android:id="@+id/answer_4"
                style="@style/TextCovidDefinitionStyle"
                android:text="@string/answer_4" />

            <TextView
                android:id="@+id/question_5"
                style="@style/TitleTextQStyle"
                android:layout_marginTop="15dp"
                android:text="@string/question_5" />

            <TextView
                android:id="@+id/answer_5"
                style="@style/TextCovidDefinitionStyle"
                android:text="@string/answer_5" />

            <TextView
                android:id="@+id/question_6"
                style="@style/TitleTextQStyle"
                android:layout_marginTop="15dp"
                android:text="@string/question_6" />

            <TextView
                android:id="@+id/answer_6"
                style="@style/TextCovidDefinitionStyle"
                android:text="@string/answer_6" />
        </LinearLayout>
    </ScrollView>
</androidx.cardview.widget.CardView>

