<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CheckYourselfActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/TitleTextQStyle"
            android:layout_margin="20dp"
            android:text="@string/covid_check_up"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="20dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <TextView
                    style="@style/TitleTextQStyle"
                    android:textSize="20dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/do_you_have_any_of_the_following" />

                <CheckBox
                    android:id="@+id/checkbox_1"
                    style="@style/CheckBoxStyle"
                    android:backgroundTint="@color/colorCheckBox"
                    android:text="@string/checkbox_text_1" />

                <CheckBox
                    android:id="@+id/checkbox_2"
                    style="@style/CheckBoxStyle"
                    android:text="@string/checkbox_text_2" />

                <CheckBox
                    android:id="@+id/checkbox_3"
                    style="@style/CheckBoxStyle"
                    android:text="@string/checkbox_text_3" />

                <CheckBox
                    android:id="@+id/checkbox_4"
                    style="@style/CheckBoxStyle"
                    android:text="@string/checkbox_text_4" />

                <CheckBox
                    android:id="@+id/checkbox_5"
                    style="@style/CheckBoxStyle"
                    android:text="@string/checkbox_text_5" />

                <CheckBox
                    android:id="@+id/checkbox_6"
                    style="@style/CheckBoxStyle"
                    android:text="@string/checkbox_text_6" />

                <Button
                    android:id="@+id/continue_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="#9370db"
                    android:text="@string/continue_text"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>