<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/cases"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="start"
        android:text="@string/Cases"
        android:textColor="@color/colorBlack"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <androidx.cardview.widget.CardView
        android:id="@+id/car"
        style="@style/CardStyle"
        app:layout_constraintBottom_toTopOf="@id/card_1"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/text_3"
            style="@style/TextStyle"
            android:text="@string/global_cases" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_1"
        style="@style/CardStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/text_1"
            style="@style/TextStyle"
            android:text="@string/egyption_cases" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/car2"
        style="@style/CardStyle"
        app:layout_constraintTop_toBottomOf="@id/card_1"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/text_2"
            style="@style/TextStyle"
            android:text="@string/the_latest_news" />

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>