<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_shadow_end_color"
    tools:context=".HomeFragment">

    <TextView
        android:id="@+id/covid_definition_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_marginTop="25dp"
        android:background="@color/colorWhite"
        android:padding="18dp"
        android:text="@string/What_is_Covid19"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/colorBlack"/>

    <TextView
        android:id="@+id/home_quarantine_rule_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@color/colorWhite"
        android:padding="18dp"
        android:text="@string/home_quarantine_rules"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/covid_definition_text"
        android:textColor="@color/colorBlack"/>

    <TextView
        android:id="@+id/check_yourself_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@color/colorWhite"
        android:padding="18dp"
        android:text="@string/Check_Yourself"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_quarantine_rule_text"
        android:textColor="@color/colorBlack"/>

    <TextView
        android:id="@+id/about_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@color/colorWhite"
        android:padding="18dp"
        android:text="@string/About"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/check_yourself_text"
        android:textColor="@color/colorBlack"/>

</androidx.constraintlayout.widget.ConstraintLayout>