<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateEvent">

    <EditText
        android:id="@+id/alarm_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_time"
        android:layout_margin="20dp"
        android:padding="25dp"
        android:hint="@string/type_your_medicine_name"
        android:textColorHint="@color/colorBlack"
        android:textSize="20sp"
        android:lines="2"
        android:gravity="bottom"
        />

    <Button
        android:id="@+id/btn_time"
        android:layout_width="200dp"
        android:layout_height="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/alarm_name"
        android:layout_margin="20dp"
        android:padding="25dp"
        android:text="@string/set_time"
        android:background="@drawable/rounded_corner"
        android:textSize="20sp"
        android:onClick="selectTime"
        />

    <Button
        android:id="@+id/btn_date"
        android:layout_width="200dp"
        android:layout_height="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_time"
        android:layout_margin="20dp"
        android:padding="25dp"
        android:text="@string/set_date"
        android:background="@drawable/rounded_corner"
        android:textSize="20sp"
        android:onClick="selectDate"
        />

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="100dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_date"
        android:layout_margin="20dp"
        android:padding="16dp"
        android:text="@string/ok"
        android:background="@drawable/rounded_corner"
        android:textSize="20sp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>